# hitch

./: .gitignore  Dockerfile  LICENSE  README.md  hitch.yaml  pyproject.toml  ssh_tunnel_pids.txt
hitch/: config.py  main.py
hitch/commands/: build.py  command.py  deployment.py  down.py  image.py  ssh_tunnel.py  up.py
resources/: cleanup.sh  install.sh
